<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">STEAMnet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="spark_button_inspiration">Inspiration</string>
    <string name="spark_button_question">What-if?</string>
    <string name="spark_button_problem">Problem</string>
    <string name="filter_settings_header">Filters...</string>
    <string name="filter_settings_include_sparks">sparks</string>
    <string name="filter_settings_include_ideas">ideas</string>
    <string name="filter_settings_sort_header">Sort by...</string>
    <string name="filter_settings_sort_options_timestamp">recent</string>
    <string name="filter_settings_sort_options_random">random</string>
    <string name="filter_settings_sort_options_relevant">relevant</string>
    <string name="filter_settings_search_hashtag_hint">search by #hashtag</string>
    <string name="ignite_button">Ignite!</string>

</resources>