<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/sidebar_header">
        
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/actionbar_btn"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_settings_header"
            android:textSize="20dp"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/sparkCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="filterSettingsFunction"
            android:tag="checkBoxChange"
            android:text="@string/filter_settings_include_sparks" />

        <CheckBox
            android:id="@+id/ideaCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="filterSettingsFunction"
            android:tag="checkBoxChange"
            android:text="@string/filter_settings_include_ideas" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <EditText
	        android:id="@+id/tag_search_edit_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:ems="10"
	        android:hint="search by a tag" >
	    </EditText>
	    
	    <Button
	        android:id="@+id/tag_search_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="Search"
	        android:enabled="false"
	        >
	    </Button>
        
        
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_settings_sort_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/recentJawnsRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="filterSettingsFunction"
            android:tag="sortRecent"
            android:checked="true"
            android:text="@string/filter_settings_sort_options_timestamp" />

        <RadioButton
            android:id="@+id/randomJawnsRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="filterSettingsFunction"
            android:tag="randomizeJawns"
            android:text="@string/filter_settings_sort_options_random" />

    </RadioGroup>

</LinearLayout>